force-app/main/default/objects/Account/fields/Account_MAX__c.field-meta.xml
<CustomField>
    <fullName>Account_MAX__c</fullName>
    <label>Account_MAX</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>