force-app/main/default/objects/Account/fields/Account_MIN__c.field-meta.xml
<CustomField>
    <fullName>Account_MIN__c</fullName>
    <label>Account_MIN</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>