force-app/main/default/objects/Account/fields/Account_SUM__c.field-meta.xml
<CustomField>
    <fullName>Account_SUM__c</fullName>
    <label>Account_SUM</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>