force-app/main/default/objects/Account/validationRules/Customer_Acc_No.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Acc_No</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(AccountNumber),
ISPICKVAL(Ownership,&apos;Public&apos;)
)</errorConditionFormula>
    <errorMessage>You must need to enter the account number When Ownership is Public</errorMessage>
</ValidationRule>