force-app/main/default/objects/Account/validationRules/Customer_Phone_No.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Phone_No</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(Phone),
ISPICKVAL(Type,&apos;Customer - Direct&apos;)
)</errorConditionFormula>
    <errorMessage>You must need to enter Phone Number in Customer-Direct</errorMessage>
</ValidationRule>