force-app/main/default/objects/Account/validationRules/Phone_Number_Should_Be_10_Char.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Should_Be_10_Char</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
LEN(Phone) &lt;&gt;  10 ,
NOT(REGEX(Phone, &quot;[0-9]{10}&quot;))
)</errorConditionFormula>
    <errorMessage>The Phone number should be 10 Digits</errorMessage>
</ValidationRule>